# crossfit-knowledge-llm

./: .gitignore  LICENSE  README.md  docker-pgvector.sh  pyproject.toml
